<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main"
    android:gravity="center_horizontal"
    tools:context="com.usc.zd.stock.feature.MainActivity">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/str_title_main"
        android:textColor="@color/color_white"
        android:textSize="30sp"
        tools:layout_editor_absoluteY="16dp" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title_main"
        android:layout_alignStart="@+id/title_main"
        android:layout_below="@+id/title_main"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:maxLines="1"
        android:gravity="center"
        android:completionThreshold="1" />

    <TextView
        android:id="@+id/query_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clear_main"
        android:layout_alignBottom="@+id/clear_main"
        android:layout_alignStart="@+id/autocomplete_main"
        android:text="@string/str_query_main"
        android:textColor="@color/color_primary_dark"
        android:textSize="30sp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/clear_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/autocomplete_main"
        android:layout_below="@+id/autocomplete_main"
        android:layout_marginTop="13dp"
        android:text="@string/str_clear_main"
        android:textColor="@color/color_primary_dark"
        android:textSize="30sp"
        tools:layout_editor_absoluteY="16dp" />


    <TextView
        android:id="@+id/favorites_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/autorefresh_main"
        android:layout_alignStart="@+id/query_main"
        android:text="@string/str_favorites_main"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/autorefresh_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query_main"
        android:layout_marginTop="17dp"
        android:layout_toStartOf="@+id/auto_switch_main"
        android:text="@string/str_autorefresh_main"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/auto_switch_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/autorefresh_main"
        android:layout_alignStart="@+id/clear_main"
        android:layout_alignTop="@+id/autorefresh_main"
        android:typeface="normal" />

    <android.widget.ImageView
        android:id="@+id/refresh_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/favorites_main"
        android:layout_alignTop="@+id/auto_switch_main"
        android:layout_toEndOf="@+id/auto_switch_main"
        android:src="@android:drawable/ic_popup_sync" />

    <Spinner
        android:id="@+id/sort_method_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/favorites_main"
        android:layout_below="@+id/favorites_main" />

    <Spinner
        android:id="@+id/sort_order_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/refresh_main"
        android:layout_below="@+id/refresh_main" />

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sort_order_main"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/sort_method_main"
        android:layout_below="@+id/sort_method_main"
        android:layout_marginTop="20dp">

        <ListView
            android:id="@+id/favorite_list_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:scrollbars="none">
        </ListView>

        <ProgressBar
            android:id="@+id/progress_bar_main"
            style="?android:attr/progressBarStyleLarge"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            />
    </FrameLayout>





</RelativeLayout>
